yaml/managerbdd_msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bddmanager
  labels:
    app: bddmanager
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: bddmanager
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: bddmanager
        tier: service
    spec:
      containers:
      - name: bddmanager
        image: "desktopmania/managerbdd:latest"
        imagePullPolicy: Always
