yaml/front_msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: front
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: ui
      containers:
      - name: ui
        image: "desktopmania/dashboard:latest"
        # imagePullPolicy: Always
        # ports:
        # - containerPort: 8000
        # livenessProbe:
        #   httpGet:
        #     path: /favicon.ico
        #     port: 8000
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5       
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
  namespace: front
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8000
  selector:
    app: ui
  type: LoadBalancer
