yaml/novnc_msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novncsvc
  labels:
    app: novncsvc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: novncsvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: novncsvc
        tier: service
    spec:
      containers:
      - name: novncsvc
        image: "desktopmania/novnc"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 6080
        readinessProbe:
          httpGet:
            path: /
            port: 6080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 6080
          initialDelaySeconds: 5
          timeoutSeconds: 5       
---
apiVersion: v1
kind: Service
metadata:
  name: novncsvc
  labels:
    app: novncsvc
    tier: service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: novncsvc
