yaml/redirect_msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect
  labels:
    app: redirect
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: redirect
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: redirect
        tier: service
    spec:
      containers:
      - name: redirect
        image: "desktopmania/redirect:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 5901
---
apiVersion: v1
kind: Service
metadata:
  name: redirect
  labels:
    app: redirect
    tier: service
spec:
  type: LoadBalancer
  ports:
  - port: 5901
  selector:
    app: redirect
