yaml/ingressroute.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: novncmsvc
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: novncmsvc
          servicePort: 80
